Struttura_HTML_CSS_12_Bool_(modifica 12bool.css)

--- a/index.html
+++ b/index.html
@@ -13,70 +13,70 @@
 
 <body class="debug">
 
-<div class="container">
+  <div class="container">
 
-  <div class="row_1">
+    <div class="row_1 offset">
 
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-
-  </div>
-
-  <div class="row_2">
-
-    <div class="col_12"><span>12 col</span></div>
-
-  </div>
-
-  <div class="row_3">
-
-    <div class="col_8"><span>8 col</span></div>
-    <div class="col_2"><span>2 col</span></div>
-    <div class="col_2"><span>2 col</span></div>
-
-  </div>
-
-  <div class="row_4">
-
-    <div class="col_1"><span>1 col</span></div>
-    <div class="col_2"><span>2 col</span></div>
-    <div class="col_2"><span>2 col</span></div>
-    <div class="col_6"><span>6 col</span></div>
-    <div class="col_1"><span>1 col</span></div>
-
-  </div>
-
-  <div class="row_5">
-
-    <div class="col_6">
-
-      <div class="col_2"><span>Nested 2 col</span></div>
-      <div class="col_2"><span>Nested 2 col</span></div>
-      <div class="col_8"><span>Nested 8 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
 
     </div>
 
-    <div class="col_6">
+    <div class="row_2">
 
-      <div class="col_6"><span>Nested 6 col</span></div>
-      <div class="col_6"><span>Nested 6 col</span></div>
+      <div class="col_12"><span>12 col</span></div>
 
     </div>
 
+    <div class="row_3">
+
+      <div class="col_8"><span>8 col</span></div>
+      <div class="col_2"><span>2 col</span></div>
+      <div class="col_2"><span>2 col</span></div>
+
+    </div>
+
+    <div class="row_4">
+
+      <div class="col_1"><span>1 col</span></div>
+      <div class="col_2"><span>2 col</span></div>
+      <div class="col_2"><span>2 col</span></div>
+      <div class="col_6"><span>6 col</span></div>
+      <div class="col_1"><span>1 col</span></div>
+
+    </div>
+
+    <div class="row_5">
+
+      <div class="col_6">
+
+        <div class="col_2"><span>Nested 2 col</span></div>
+        <div class="col_2"><span>Nested 2 col</span></div>
+        <div class="col_8"><span>Nested 8 col</span></div>
+
+      </div>
+
+      <div class="col_6">
+
+        <div class="col_6"><span>Nested 6 col</span></div>
+        <div class="col_6"><span>Nested 6 col</span></div>
+
+      </div>
+
+    </div>
+
+
   </div>
-
-
-</div>
 
 
 </body>
