Struttura_HTML_CSS_12_Bool_(modifica index.html)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="container">
 
-    <div class="row_1 offset">
+    <div class="row_1">
 
       <div class="col_1"><span>1 col</span></div>
       <div class="col_1"><span>1 col</span></div>
